@@ -20,6 +20,8 @@ xx-xx-2013
 - moved from Ogg::Vorbis::Header to Ogg::Vorbis::Header::PurePerl and finally added code for tags from ogg files
 - moved (again) from Net::Interface to IO::Interface (thx to shantanubhadoria) (issue #17)
 - removed usage of Net::Address::Ethernet (handled by IO::Interface too)
+- fixed a bug regarding delivering preview images
+- moved from Digest::SHA1 to Digest::SHA and improved the get_randid function by using timestamp with milliseconds
 
 Version 0.62.0
 05-05-2013
